--- a/Web.config
+++ b/Web.config
@@ -14,8 +14,8 @@
     <add key="MicrosoftAppPassword" value="" />
 
     <!--LUIS-->
-    <add key="LuisAppId" value="" />
-    <add key="LuisAPIKey" value="" />
+    <add key="LuisAppId" value="363005b7-7eaa-48b2-acbe-965979ca2362" />
+    <add key="LuisAPIKey" value="72d8865b7bf9468187adf70b6372cf52" />
     <add key="LuisAPIHostName" value="westus.api.cognitive.microsoft.com" />
     
   </appSettings>
